--- a/src/pages/home/styles.module.css
+++ b/src/pages/home/styles.module.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500&display=swap");
 .wrapper {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(325px, 1fr));
-  margin: 2rem;
+  margin: 1rem;
 }
 
 .pagination {
@@ -22,10 +23,96 @@
   padding: 8px;
   margin: 2px;
   text-decoration: none;
+  color: #ffffd5;
+}
+
+.search__container {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.search__title {
+  font-size: 22px;
+  font-weight: 900;
+  text-align: center;
+  color: #fff765;
+  font-family: "Baloo Paaji 2", cursive;
+}
+
+/* //////////////////////////////// */
+.search {
+  width: 60%;
+  display: flex;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00b4cc;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9dbfaf;
+  font-family: "Baloo Paaji 2", cursive;
+  font-size: 18px;
+}
+
+.searchTerm:focus {
+  color: #00b4cc;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00b4cc;
+  background: #00b4cc;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+.container {
+  text-align: center;
+}
+
+.btnClean {
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  color: #fff;
+  border: 2px solid #fff;
+  padding: 0.9rem 1.6rem;
+  display: inline-block;
+  transition: all 0.3s linear;
+  cursor: pointer;
+  font-family: "Baloo Paaji 2", cursive;
+  background: #243e54;
+  margin-top: 10px;
+  font-weight: 500;
+}
+.btnClean:hover {
+  background: #02b1c8;
+}
+
+.errorText {
+  font-size: 30px;
+  font-family: "Schoolbell", serif;
+  font-weight: 600;
+  text-align: center;
+  color: #448c3f;
 }
 
 @media (min-width: 600px) {
   .pagination {
     font-size: 50px;
+  }
+  .search {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
   }
 }
